Ensuring init code is called immediately

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             // before scripts try to access the window document
             FormItMCP.initializeUI();
 
+            // initialize the MCP connection
+            FormItMCP.initializeMCP();
+
         }); // DOMContentLoaded
     </script>
 </head>
