--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
         <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/v23_0/FormItInterface.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginUI.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItWorkflowPlugins/Utils.js"></script>
-        <script type="text/javascript" src="FormItMCP.js"></script>
+        <script type="text/javascript" src="FormItMCP_web.js"></script>
+        <script type="module" src="MCP-statuses.js"></script>
+
         <script type="text/javascript">
-
-        FormItInterface.Initialize(async function () {
-            // initialize the UI
-            // this must be called from here, to ensure the HTML page is loaded
-            // before scripts try to access the window document
-            FormItMCP.initializeUI();
-            // initialize the MCP connection
-            FormItMCP.initializeMCP();
-
+            FormItInterface.Initialize(async function () {
+                // initialize the UI
+                // this must be called from here, to ensure the HTML page is loaded
+                // before scripts try to access the window document
+                FormItMCP.initializeUI();
         }); // DOMContentLoaded
     </script>
 </head>
