Fixing script loading, renaming

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <script type="text/javascript" src="https://formit3d.github.io/SharedPluginUtilities/v23_0/FormItInterface.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItExamplePlugins/SharedPluginFiles/FormItPluginUI.js"></script>
         <script type="text/javascript" src="https://formit3d.github.io/FormItWorkflowPlugins/Utils.js"></script>
-        <script type="text/javascript" src="FormItMCP_web.js"></script>
-        <script type="module" src="MCP-statuses.js"></script>
+        <script type="module" src="FormItMCP_web.js"></script>
+        <script type="text/javascript" src="MCP-statuses.js"></script>
 
         <script type="text/javascript">
-            FormItInterface.Initialize(async function () {
+            FormItInterface.Initialize(function () {
                 // initialize the UI
                 // this must be called from here, to ensure the HTML page is loaded
                 // before scripts try to access the window document
